--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,18 @@ body {
     overflow-wrap: break-word;
 }
 
+
 h1, h2, h3 {
-    font-weight: 900;
+    font-weight: 990;
     color: #000;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #000;
+}
+
+#title {
+    font-family: 'Knewave', cursive;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #000;
 }
 
 .wrapper {
@@ -93,5 +102,8 @@ section.module h1 {
     font-size: 78px;
     z-index: 50;
     text-transform: uppercase;
-    color: white; text-shadow: black 0.1em 0.1em 0.2em
+    color: white;
+    font-family: 'Knewave';
+    font-family: 'Open Sans', sans-serif;
+
 }
