--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,12 @@ body {
     overflow-wrap: break-word;
 }
 
-
-h1, h2, h3 {
-    font-weight: 990;
+h1, h2 {
+    font-weight: 900;
     color: #000;
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: #000;
+
 }
 
 #title {
@@ -52,7 +52,7 @@ section.module h2 {
     font-size: 30px;
 }
 
-section.module.content{
+section.module.content {
     padding: 40px 0;
     background: #ece7d5;
 }
@@ -74,36 +74,32 @@ section.module.parallax {
     -o-background-size: cover;
 }
 
-section.module.parallax:after {
+section.module.parallax:after{
     content: "";
     height: 100%;
     width: 100%;
     position: absolute;
     z-index: 8;
+    background: linear-gradient(to bottom, rgba(0, 0,0, 0) 0, rgba(0, 0, 0, 0) 60%, #000 100%);
     background: -moz-linear-gradient(to bottom, rgba(0, 0,0, 0) 0, rgba(0, 0, 0, 0) 60%, #000 100%);
     background: -webkit-linear-gradient(to bottom, rgba(0, 0,0, 0) 0, rgba(0, 0, 0, 0) 60%, #000 100%);
-    background: linear-gradient(to bottom, rgba(0, 0,0, 0) 0, rgba(0, 0, 0, 0) 60%, #000 100%);
 }
 
 section.module.parallax-1 {
-    background-image: url(https://wallpapercave.com/wp/wp1972518.jpg);
+    background-image: url("https://wallpapercave.com/wp/wp1972518.jpg");
 }
 
 section.module.parallax-2 {
-    background-image: url(https://images8.alphacoders.com/744/744720.jpg);
+    background-image: url("https://images8.alphacoders.com/744/744720.jpg");
 }
-
 section.module.parallax-3 {
-    background-image: url(https://p4.wallpaperbetter.com/wallpaper/720/262/406/anime-naruto-shippuuden-uzumaki-naruto-anime-boy-hokage-naruto-illustration-wallpaper-preview.jpg);
+    background-image: url("https://p4.wallpaperbetter.com/wallpaper/720/262/406/anime-naruto-shippuuden-uzumaki-naruto-anime-boy-hokage-naruto-illustration-wallpaper-preview.jpg");
 }
 
 section.module h1 {
     text-align: center;
     font-size: 78px;
     z-index: 50;
+    color: #fff;
     text-transform: uppercase;
-    color: white;
-    font-family: 'Knewave';
-    font-family: 'Open Sans', sans-serif;
-
 }
